--- a/playground/ferfun/exam/src/app/app.component.html
+++ b/playground/ferfun/exam/src/app/app.component.html
@@ -65,5 +65,18 @@
                 <form-model-driven></form-model-driven>
             </div>
         </td>
+        <td>
+            <div class="lesson lesson-forms">
+                <form-signup></form-signup>
+            </div>
+        </td>
+        <td>
+            <pipes></pipes>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <lessons> </lessons>
+        </td>
     </tr>
 </table>
