end of practice

--- a/playground/ferfun/exam/src/app/app.component.html
+++ b/playground/ferfun/exam/src/app/app.component.html
@@ -78,5 +78,13 @@
         <td>
             <lessons> </lessons>
         </td>
+        <td>
+            <dashboard></dashboard>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <router></router>
+        </td>
     </tr>
 </table>
