--- a/playground/ferfun/exam/src/styles.css
+++ b/playground/ferfun/exam/src/styles.css
@@ -100,3 +100,20 @@ table td, table th {
     max-width: 400px;
     cursor: pointer;
 }
+
+
+.l-header {
+    height: 58px;
+}
+
+.top-menu {
+    margin-left: 50px;
+}
+
+.top-menu li {
+    box-shadow: none !important;
+}
+
+.l-sample-app {
+    text-align: center;
+}
