--- a/playground/ferfun/exam/src/app/dashboard/dashboard.component.html
+++ b/playground/ferfun/exam/src/app/dashboard/dashboard.component.html
@@ -9,9 +9,9 @@
   <div>
   
       <div class="main-container">
-      
-          <router-outlet></router-outlet>
+        
           
+          <dashboard-header></dashboard-header>
           <router-outlet name="section1"></router-outlet>
 
           <router-outlet name="section2"></router-outlet>
