--- a/playground/ferfun/exam/src/app/router/router.component.html
+++ b/playground/ferfun/exam/src/app/router/router.component.html
@@ -1,4 +1,4 @@
-<header class="l-header v-center-parent">
+<header>
  
   <ul class="top-menu disable-link-styles" 
       routerLinkActive="menu-active" >
@@ -9,7 +9,7 @@
       </li>
       <li>
           <a routerLinkActive="menu-active"  
-              routerLink="courses">Courses</a>
+              [routerLink]="['courses']">Courses</a>
       </li>
       <li>
           <a routerLinkActive="menu-active" 
